@@ -108,10 +108,16 @@ sub render_input_field_actual
 {
 	my( $self, $session, $value, $dataset, $staff, $hidden_fields, $obj, $basename ) = @_;
 
+	my $table = $session->make_element( "table", border=>0, cellpadding=>0, cellspacing=>0, class=>"ep_form_input_grid" );
+	my $tr = $session->make_element( "tr" );
+	my $td = $session->make_element( "td" );
+	$table->appendChild( $tr );
+	$tr->appendChild( $td );
 	if( $self->get_property( "input_ordered" ) )
 	{
-		return $self->SUPER::render_input_field_actual( 
-			$session, $value, $dataset, $staff, $hidden_fields, $obj, $basename );
+		$td->appendChild(  $self->SUPER::render_input_field_actual( 
+			$session, $value, $dataset, $staff, $hidden_fields, $obj, $basename ) );
+		return $table;
 	}
 
 	my $required = $self->get_property( "required" );
@@ -123,7 +129,8 @@ sub render_input_field_actual
 
 	# called as a seperate function because subject does this
 	# bit differently, and overrides render_set_input.
-	return $self->render_set_input( $session, $default, $required, $obj, $basename );
+	$td->appendChild( $self->render_set_input( $session, $default, $required, $obj, $basename ) );
+	return $table;
 }
 
 sub input_tags_and_labels
@@ -179,20 +186,20 @@ sub render_set_input
 	
 	my $input_style = $self->get_property( "input_style" );
 
+	if( 
+		!$self->get_property( "multiple" ) && 
+		!$required ) 
+	{
+		# If it's not multiple and not required there 
+		# must be a way to unselect it.
+		$tags = [ "", @{$tags} ];
+		my $unspec = $session->phrase( 
+			"lib/metafield:unspecified_selection" );
+		$labels = { ""=>$unspec, %{$labels} };
+	}
+
 	if( $input_style eq "short" )
 	{
-		if( 
-			!$self->get_property( "multiple" ) && 
-			!$required ) 
-		{
-			# If it's not multiple and not required there 
-			# must be a way to unselect it.
-			$tags = [ "", @{$tags} ];
-			my $unspec = $session->phrase( 
-				"lib/metafield:unspecified_selection" );
-			$labels = { ""=>$unspec, %{$labels} };
-		}
-
 		return( $session->render_option_list(
 				values => $tags,
 				labels => $labels,
